# taskflow-feedstock

./: .recipe_maintainers.json  README.md  conda-forge.yml
.azure-pipelines/: azure-pipelines-linux.yml
.ci_support/: linux_ppc64le_cuda_compiler_version11.8cxx_compiler_version11.yaml  linux_ppc64le_cuda_compiler_version12.4cxx_compiler_version12.yaml  linux_ppc64le_cuda_compiler_versionNonecxx_compiler_version13.yaml  osx_64_.yaml  osx_arm64_.yaml  win_64_cuda_compiler_version11.8.yaml  win_64_cuda_compiler_version12.6.yaml  win_64_cuda_compiler_versionNone.yaml
.github/: CODEOWNERS
recipe/: bld.bat  build.bat  build.sh  conda_build_config.yaml  meta.yaml  recipe.yaml
recipe/tests/: CMakeLists.txt  main.cpp
